--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -33,6 +33,7 @@
                     app:navigationIcon="@drawable/ic_baseline_dehaze_24"
                     app:titleTextColor="#ffff">
                     <TextView
+                        android:id="@+id/layoutMainHeading"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="M E S S A G E S"
@@ -45,7 +46,8 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         app:cardCornerRadius="07dp"
-                        android:layout_marginLeft="90dp">
+                        android:layout_gravity="right"
+                        android:layout_marginRight="20dp">
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
