--- a/app/src/main/res/layout/call_tablayout.xml
+++ b/app/src/main/res/layout/call_tablayout.xml
@@ -5,14 +5,10 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Calls"
-        android:textSize="25sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:textColor="#d4b300">
-    </TextView>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewcontacts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
